// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`whisper > decode 1`] = `
Whisper {
  "language": "en",
  "segments": [
    Segment {
      "avg_logprob": -0.25796130851463034,
      "compression_ratio": 1.4965034965034965,
      "end": 22.76,
      "id": 0,
      "no_speech_prob": 3.2192918036216822e-12,
      "seek": 0,
      "start": 1.640000000000002,
      "temperature": 0,
      "text": " Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms. Leads by your body. Upper arms, forearms, two palms. Keep between arms, shoulder waist apart. Until your arms shoulder level.",
      "tokens": [
        50365,
        3087,
        3963,
        11,
        5193,
        13,
        17681,
        473,
        428,
        5812,
        13,
        6116,
        2592,
        1261,
        7170,
        1803,
        13,
        26148,
        493,
        428,
        5812,
        13,
        1456,
        5834,
        538,
        428,
        1772,
        13,
        36926,
        5812,
        11,
        2091,
        19537,
        11,
        732,
        30819,
        13,
        5527,
        1296,
        5812,
        11,
        7948,
        15732,
        4936,
        13,
        9088,
        428,
        5812,
        7948,
        1496,
        13,
        51515,
      ],
      "words": [
        Word {
          "end": 2.48,
          "probability": 0.8233931660652161,
          "start": 1.640000000000002,
          "word": " Next",
        },
        Word {
          "end": 2.94,
          "probability": 0.866375207901001,
          "start": 2.48,
          "word": " movement,",
        },
        Word {
          "end": 4.04,
          "probability": 0.7291399836540222,
          "start": 3.48,
          "word": " opening.",
        },
        Word {
          "end": 5.68,
          "probability": 0.9874618649482727,
          "start": 4.84,
          "word": " Rotate",
        },
        Word {
          "end": 5.9,
          "probability": 0.9904507994651794,
          "start": 5.68,
          "word": " your",
        },
        Word {
          "end": 6.48,
          "probability": 0.9933598637580872,
          "start": 5.9,
          "word": " arms.",
        },
        Word {
          "end": 7.6,
          "probability": 0.961674690246582,
          "start": 6.86,
          "word": " Palms",
        },
        Word {
          "end": 8.32,
          "probability": 0.766989529132843,
          "start": 7.6,
          "word": " turn",
        },
        Word {
          "end": 8.9,
          "probability": 0.9624404907226562,
          "start": 8.32,
          "word": " facing",
        },
        Word {
          "end": 9.46,
          "probability": 0.9893306493759155,
          "start": 8.9,
          "word": " yourself.",
        },
        Word {
          "end": 10.56,
          "probability": 0.9939571619033813,
          "start": 10.26,
          "word": " Lift",
        },
        Word {
          "end": 10.92,
          "probability": 0.9959040284156799,
          "start": 10.56,
          "word": " up",
        },
        Word {
          "end": 11.18,
          "probability": 0.996566653251648,
          "start": 10.92,
          "word": " your",
        },
        Word {
          "end": 11.68,
          "probability": 0.9968444108963013,
          "start": 11.18,
          "word": " arms.",
        },
        Word {
          "end": 12.86,
          "probability": 0.8661425411701202,
          "start": 12.42,
          "word": " Leads",
        },
        Word {
          "end": 13.26,
          "probability": 0.9841837882995605,
          "start": 12.86,
          "word": " by",
        },
        Word {
          "end": 13.52,
          "probability": 0.9921497106552124,
          "start": 13.26,
          "word": " your",
        },
        Word {
          "end": 14.54,
          "probability": 0.9764577746391296,
          "start": 13.52,
          "word": " body.",
        },
        Word {
          "end": 15.62,
          "probability": 0.577121376991272,
          "start": 15.38,
          "word": " Upper",
        },
        Word {
          "end": 16.04,
          "probability": 0.9948689937591553,
          "start": 15.62,
          "word": " arms,",
        },
        Word {
          "end": 16.82,
          "probability": 0.9826947748661041,
          "start": 16.32,
          "word": " forearms,",
        },
        Word {
          "end": 17.16,
          "probability": 0.6479141712188721,
          "start": 17.04,
          "word": " two",
        },
        Word {
          "end": 17.58,
          "probability": 0.7293593883514404,
          "start": 17.16,
          "word": " palms.",
        },
        Word {
          "end": 18.5,
          "probability": 0.9799142479896545,
          "start": 18.18,
          "word": " Keep",
        },
        Word {
          "end": 18.86,
          "probability": 0.9901476502418518,
          "start": 18.5,
          "word": " between",
        },
        Word {
          "end": 19.22,
          "probability": 0.990228533744812,
          "start": 18.86,
          "word": " arms,",
        },
        Word {
          "end": 19.68,
          "probability": 0.7660839557647705,
          "start": 19.44,
          "word": " shoulder",
        },
        Word {
          "end": 19.9,
          "probability": 0.4920184910297394,
          "start": 19.68,
          "word": " waist",
        },
        Word {
          "end": 20.18,
          "probability": 0.36617422103881836,
          "start": 19.9,
          "word": " apart.",
        },
        Word {
          "end": 21.02,
          "probability": 0.9870204925537109,
          "start": 20.4,
          "word": " Until",
        },
        Word {
          "end": 21.24,
          "probability": 0.9968229532241821,
          "start": 21.02,
          "word": " your",
        },
        Word {
          "end": 21.7,
          "probability": 0.982371985912323,
          "start": 21.24,
          "word": " arms",
        },
        Word {
          "end": 22.4,
          "probability": 0.49952253699302673,
          "start": 21.7,
          "word": " shoulder",
        },
        Word {
          "end": 22.76,
          "probability": 0.9891071915626526,
          "start": 22.4,
          "word": " level.",
        },
      ],
    },
    Segment {
      "avg_logprob": -0.1642665689641779,
      "compression_ratio": 1.329192546583851,
      "end": 44.76,
      "id": 1,
      "no_speech_prob": 6.091795904522579e-12,
      "seek": 2276,
      "start": 22.76,
      "temperature": 0,
      "text": " Go down, push. Start from body. Upper arms, forearms, two palms. And gradually sit in your palms. Push to where? We say almost to the bottom. Okay, keep between arms. Still is shoulder waist apart. This is opening.",
      "tokens": [
        50365,
        1037,
        760,
        11,
        2944,
        13,
        6481,
        490,
        1772,
        13,
        36926,
        5812,
        11,
        2091,
        19537,
        11,
        732,
        30819,
        13,
        400,
        13145,
        1394,
        294,
        428,
        30819,
        13,
        18229,
        281,
        689,
        30,
        492,
        584,
        1920,
        281,
        264,
        2767,
        13,
        1033,
        11,
        1066,
        1296,
        5812,
        13,
        8291,
        307,
        7948,
        15732,
        4936,
        13,
        639,
        307,
        5193,
        13,
        51468,
      ],
      "words": [
        Word {
          "end": 23.78,
          "probability": 0.36289238929748535,
          "start": 22.76,
          "word": " Go",
        },
        Word {
          "end": 24.22,
          "probability": 0.9346944689750671,
          "start": 23.78,
          "word": " down,",
        },
        Word {
          "end": 24.8,
          "probability": 0.9636329412460327,
          "start": 24.56,
          "word": " push.",
        },
        Word {
          "end": 25.54,
          "probability": 0.9751925468444824,
          "start": 25.18,
          "word": " Start",
        },
        Word {
          "end": 25.92,
          "probability": 0.9771847128868103,
          "start": 25.54,
          "word": " from",
        },
        Word {
          "end": 26.42,
          "probability": 0.9253937005996704,
          "start": 25.92,
          "word": " body.",
        },
        Word {
          "end": 26.98,
          "probability": 0.19647110998630524,
          "start": 26.58,
          "word": " Upper",
        },
        Word {
          "end": 27.46,
          "probability": 0.9706757664680481,
          "start": 26.98,
          "word": " arms,",
        },
        Word {
          "end": 28.24,
          "probability": 0.9621413946151733,
          "start": 27.64,
          "word": " forearms,",
        },
        Word {
          "end": 28.48,
          "probability": 0.4574151635169983,
          "start": 28.42,
          "word": " two",
        },
        Word {
          "end": 28.94,
          "probability": 0.5510187745094299,
          "start": 28.48,
          "word": " palms.",
        },
        Word {
          "end": 29.76,
          "probability": 0.863405704498291,
          "start": 29.64,
          "word": " And",
        },
        Word {
          "end": 31,
          "probability": 0.8693186044692993,
          "start": 29.76,
          "word": " gradually",
        },
        Word {
          "end": 31.72,
          "probability": 0.4436245858669281,
          "start": 31,
          "word": " sit",
        },
        Word {
          "end": 31.86,
          "probability": 0.9086538553237915,
          "start": 31.72,
          "word": " in",
        },
        Word {
          "end": 32.12,
          "probability": 0.9900082349777222,
          "start": 31.86,
          "word": " your",
        },
        Word {
          "end": 32.64,
          "probability": 0.9759101271629333,
          "start": 32.12,
          "word": " palms.",
        },
        Word {
          "end": 34.9,
          "probability": 0.9939415454864502,
          "start": 34.14,
          "word": " Push",
        },
        Word {
          "end": 35.12,
          "probability": 0.9663729071617126,
          "start": 34.9,
          "word": " to",
        },
        Word {
          "end": 35.44,
          "probability": 0.9420095086097717,
          "start": 35.12,
          "word": " where?",
        },
        Word {
          "end": 36.8,
          "probability": 0.8699867725372314,
          "start": 36.4,
          "word": " We",
        },
        Word {
          "end": 37.04,
          "probability": 0.8271656036376953,
          "start": 36.8,
          "word": " say",
        },
        Word {
          "end": 37.66,
          "probability": 0.7371964454650879,
          "start": 37.04,
          "word": " almost",
        },
        Word {
          "end": 38.16,
          "probability": 0.9805712103843689,
          "start": 37.66,
          "word": " to",
        },
        Word {
          "end": 38.3,
          "probability": 0.9987987279891968,
          "start": 38.16,
          "word": " the",
        },
        Word {
          "end": 38.6,
          "probability": 0.9951687455177307,
          "start": 38.3,
          "word": " bottom.",
        },
        Word {
          "end": 39.44,
          "probability": 0.5917934775352478,
          "start": 39.34,
          "word": " Okay,",
        },
        Word {
          "end": 39.78,
          "probability": 0.9664689302444458,
          "start": 39.56,
          "word": " keep",
        },
        Word {
          "end": 40.12,
          "probability": 0.8640210032463074,
          "start": 39.78,
          "word": " between",
        },
        Word {
          "end": 40.52,
          "probability": 0.9822470545768738,
          "start": 40.12,
          "word": " arms.",
        },
        Word {
          "end": 41.3,
          "probability": 0.8964163661003113,
          "start": 41.02,
          "word": " Still",
        },
        Word {
          "end": 41.64,
          "probability": 0.8495765328407288,
          "start": 41.3,
          "word": " is",
        },
        Word {
          "end": 42.22,
          "probability": 0.5502098202705383,
          "start": 41.64,
          "word": " shoulder",
        },
        Word {
          "end": 42.52,
          "probability": 0.005020122975111008,
          "start": 42.22,
          "word": " waist",
        },
        Word {
          "end": 42.82,
          "probability": 0.008073404431343079,
          "start": 42.52,
          "word": " apart.",
        },
        Word {
          "end": 43.82,
          "probability": 0.9963296055793762,
          "start": 43.2,
          "word": " This",
        },
        Word {
          "end": 44.08,
          "probability": 0.9983371496200562,
          "start": 43.82,
          "word": " is",
        },
        Word {
          "end": 44.76,
          "probability": 0.9324376583099365,
          "start": 44.08,
          "word": " opening.",
        },
      ],
    },
  ],
  "text": " Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms. Leads by your body. Upper arms, forearms, two palms. Keep between arms, shoulder waist apart. Until your arms shoulder level. Go down, push. Start from body. Upper arms, forearms, two palms. And gradually sit in your palms. Push to where? We say almost to the bottom. Okay, keep between arms. Still is shoulder waist apart. This is opening.",
}
`;

exports[`whisper > transform 1`] = `
[
  {
    "end": 22.76,
    "id": 0,
    "start": 1.640000000000002,
    "text": " Next movement, opening. Rotate your arms. Palms turn facing yourself. Lift up your arms. Leads by your body. Upper arms, forearms, two palms. Keep between arms, shoulder waist apart. Until your arms shoulder level.",
    "words": [
      {
        "end": 2.48,
        "start": 1.640000000000002,
        "word": " Next",
      },
      {
        "end": 2.94,
        "start": 2.48,
        "word": " movement,",
      },
      {
        "end": 4.04,
        "start": 3.48,
        "word": " opening.",
      },
      {
        "end": 5.68,
        "start": 4.84,
        "word": " Rotate",
      },
      {
        "end": 5.9,
        "start": 5.68,
        "word": " your",
      },
      {
        "end": 6.48,
        "start": 5.9,
        "word": " arms.",
      },
      {
        "end": 7.6,
        "start": 6.86,
        "word": " Palms",
      },
      {
        "end": 8.32,
        "start": 7.6,
        "word": " turn",
      },
      {
        "end": 8.9,
        "start": 8.32,
        "word": " facing",
      },
      {
        "end": 9.46,
        "start": 8.9,
        "word": " yourself.",
      },
      {
        "end": 10.56,
        "start": 10.26,
        "word": " Lift",
      },
      {
        "end": 10.92,
        "start": 10.56,
        "word": " up",
      },
      {
        "end": 11.18,
        "start": 10.92,
        "word": " your",
      },
      {
        "end": 11.68,
        "start": 11.18,
        "word": " arms.",
      },
      {
        "end": 12.86,
        "start": 12.42,
        "word": " Leads",
      },
      {
        "end": 13.26,
        "start": 12.86,
        "word": " by",
      },
      {
        "end": 13.52,
        "start": 13.26,
        "word": " your",
      },
      {
        "end": 14.54,
        "start": 13.52,
        "word": " body.",
      },
      {
        "end": 15.62,
        "start": 15.38,
        "word": " Upper",
      },
      {
        "end": 16.04,
        "start": 15.62,
        "word": " arms,",
      },
      {
        "end": 16.82,
        "start": 16.32,
        "word": " forearms,",
      },
      {
        "end": 17.16,
        "start": 17.04,
        "word": " two",
      },
      {
        "end": 17.58,
        "start": 17.16,
        "word": " palms.",
      },
      {
        "end": 18.5,
        "start": 18.18,
        "word": " Keep",
      },
      {
        "end": 18.86,
        "start": 18.5,
        "word": " between",
      },
      {
        "end": 19.22,
        "start": 18.86,
        "word": " arms,",
      },
      {
        "end": 19.68,
        "start": 19.44,
        "word": " shoulder",
      },
      {
        "end": 19.9,
        "start": 19.68,
        "word": " waist",
      },
      {
        "end": 20.18,
        "start": 19.9,
        "word": " apart.",
      },
      {
        "end": 21.02,
        "start": 20.4,
        "word": " Until",
      },
      {
        "end": 21.24,
        "start": 21.02,
        "word": " your",
      },
      {
        "end": 21.7,
        "start": 21.24,
        "word": " arms",
      },
      {
        "end": 22.4,
        "start": 21.7,
        "word": " shoulder",
      },
      {
        "end": 22.76,
        "start": 22.4,
        "word": " level.",
      },
    ],
  },
  {
    "end": 44.76,
    "id": 1,
    "start": 22.76,
    "text": " Go down, push. Start from body. Upper arms, forearms, two palms. And gradually sit in your palms. Push to where? We say almost to the bottom. Okay, keep between arms. Still is shoulder waist apart. This is opening.",
    "words": [
      {
        "end": 23.78,
        "start": 22.76,
        "word": " Go",
      },
      {
        "end": 24.22,
        "start": 23.78,
        "word": " down,",
      },
      {
        "end": 24.8,
        "start": 24.56,
        "word": " push.",
      },
      {
        "end": 25.54,
        "start": 25.18,
        "word": " Start",
      },
      {
        "end": 25.92,
        "start": 25.54,
        "word": " from",
      },
      {
        "end": 26.42,
        "start": 25.92,
        "word": " body.",
      },
      {
        "end": 26.98,
        "start": 26.58,
        "word": " Upper",
      },
      {
        "end": 27.46,
        "start": 26.98,
        "word": " arms,",
      },
      {
        "end": 28.24,
        "start": 27.64,
        "word": " forearms,",
      },
      {
        "end": 28.48,
        "start": 28.42,
        "word": " two",
      },
      {
        "end": 28.94,
        "start": 28.48,
        "word": " palms.",
      },
      {
        "end": 29.76,
        "start": 29.64,
        "word": " And",
      },
      {
        "end": 31,
        "start": 29.76,
        "word": " gradually",
      },
      {
        "end": 31.72,
        "start": 31,
        "word": " sit",
      },
      {
        "end": 31.86,
        "start": 31.72,
        "word": " in",
      },
      {
        "end": 32.12,
        "start": 31.86,
        "word": " your",
      },
      {
        "end": 32.64,
        "start": 32.12,
        "word": " palms.",
      },
      {
        "end": 34.9,
        "start": 34.14,
        "word": " Push",
      },
      {
        "end": 35.12,
        "start": 34.9,
        "word": " to",
      },
      {
        "end": 35.44,
        "start": 35.12,
        "word": " where?",
      },
      {
        "end": 36.8,
        "start": 36.4,
        "word": " We",
      },
      {
        "end": 37.04,
        "start": 36.8,
        "word": " say",
      },
      {
        "end": 37.66,
        "start": 37.04,
        "word": " almost",
      },
      {
        "end": 38.16,
        "start": 37.66,
        "word": " to",
      },
      {
        "end": 38.3,
        "start": 38.16,
        "word": " the",
      },
      {
        "end": 38.6,
        "start": 38.3,
        "word": " bottom.",
      },
      {
        "end": 39.44,
        "start": 39.34,
        "word": " Okay,",
      },
      {
        "end": 39.78,
        "start": 39.56,
        "word": " keep",
      },
      {
        "end": 40.12,
        "start": 39.78,
        "word": " between",
      },
      {
        "end": 40.52,
        "start": 40.12,
        "word": " arms.",
      },
      {
        "end": 41.3,
        "start": 41.02,
        "word": " Still",
      },
      {
        "end": 41.64,
        "start": 41.3,
        "word": " is",
      },
      {
        "end": 42.22,
        "start": 41.64,
        "word": " shoulder",
      },
      {
        "end": 42.52,
        "start": 42.22,
        "word": " waist",
      },
      {
        "end": 42.82,
        "start": 42.52,
        "word": " apart.",
      },
      {
        "end": 43.82,
        "start": 43.2,
        "word": " This",
      },
      {
        "end": 44.08,
        "start": 43.82,
        "word": " is",
      },
      {
        "end": 44.76,
        "start": 44.08,
        "word": " opening.",
      },
    ],
  },
]
`;
